<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/adminHomeFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/productCatalogueFragment"
        android:icon="@drawable/ic_package"
        android:title="@string/nav_products" />
    <item
        android:id="@+id/orderBookFragment"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/nav_orders" />
    <item
        android:id="@+id/teamListFragment"
        android:icon="@drawable/ic_people"
        android:title="@string/nav_admin_users" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
